resolve few bugs on mobile web

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -230,7 +230,7 @@ button {
     /* make sure black vein would cover all lists */
     width: 100%;
     height: 100%;
-    /*top: 0;*/
+    top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.9);
     position: fixed;
@@ -324,7 +324,45 @@ button {
 .open-button:hover, .open-button:focus {
   /*background-color: #ddd;*/
 }
+
+@media (min-width: 768px) {
+  .message{
+      color: #fff;
+      background-color:  #FF4A2C;
+      text-align:center;
+      display: block;
+      padding: 10px 10px;
+      font-size: 20px;
+  }
+
+  .message:hover{
+      color: #fff;
+      background-color:  #f82300;
+      text-align:center;
+      display: block;
+      padding: 10px 10px;
+      font-size: 20px;
+  }
+}
+
 @media (max-width: 768px) {
+  .message{
+      color: #fff;
+      background-color:  #FF4A2C;
+      text-align:center;
+      display: block;
+      padding: 10px 10px;
+  }
+
+  .message:hover{
+      color: #fff;
+      background-color:  #f82300;
+      text-align:center;
+      display: block;
+      padding: 10px 10px;
+
+  }
+
   .open-button {
     width: 44px;
     height: 34px;
@@ -404,7 +442,7 @@ button {
     font-size: 25px;
   }
   body {
-    font-size: 1.2em;
+
   }
 }
 
